# kxi-cli

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .snyk  CONTRIBUTING.md  MANIFEST.in  README.md  cspell.json  kxi.py  mkdocs.requirements  mkdocs.yml  pyproject.toml  requirements.txtt  setup.py  sonar-project.properties  test-and-coverage.sh  tests-config.yml  wss-unified-agent.config
.gitlab/: publish.yml
.gitlab/merge_request_templates/: Tag.md
ci/: kxi-cli.sh
custom_theme/partials/: header.html
dev_docs/: auth.md  tutorial.md
docker/: Dockerfile.kubectl
docs/: cli.md  index.md
kxi/: common.py  log.py  main.py
kxi/commands/: assembly.py  auth.py  client.py  install.py  query.py
kxi/tests/: test-kube-config  test_configure.py  test_install.py  test_install_e2e.py  test_query.py
kxi/tests/files/: test-kube-config
kxicli/: azure_ad.py  cli_group.py  common.py  config.py  log.py  main.py  options.py  phrases.py
kxicli/commands/: assembly.py  assembly_kxicontroller.py  auth.py  azure.py  azure_idp.py  backup.py  client.py  common.py  configure.py  entitlement.py  install.py  package.py  publish.py  query.py  user.py
kxicli/commands/common/: arg.py  docker.py  helm.py  namespace.py
kxicli/resources/: auth.py  entitlement.py  helm.py  helm_chart.py  keycloak_definitions.py  secret.py  user.py
kxicli/tests/: requirements.txt  test_assembly.py  test_azure.py  test_azure_e2e.py  test_common.py  test_configure.py  test_install.py  test_install_e2e.py  test_query.py
kxicli/tests/files/: assembly-v1alpha1.yaml  output-values-license-as-env-var.yaml  output-values.yaml  test-cli-config  test-docker-config-json  test-kube-config  test-values.yaml
tests/: cli_io.py  conftest.py  const.py  mocks.py  test_airgapped.py  test_assembly.py  test_assembly_kxicontroller.py  test_auth.py  test_azure.py  test_azure_ad.py  test_azure_e2e.py  test_azure_idp.py  test_backup.py  test_client.py  test_common.py  test_configure.py  test_entitlement.py  test_helm.py  test_helm_chart.py  test_install.py  test_install_e2e.py  test_integration_assembly.py  test_integration_user.py  test_namespace.py  test_options.py  test_package.py  test_profile_awareness.py  test_publish.py  test_query.py  test_user.py  utils.py
tests/files/: .editorconfig  assembly-v1.yaml  assembly2-v1.yaml  azure-ad-applications-empty.json  azure-ad-applications.json  azure-ad-group-empty.json  azure-ad-group.json  integration-cli-config  output-values-external-certmanager.yaml  output-values-license-as-env-var.yaml  output-values-license-on-demand.yaml  output-values-manual-ingress-secret.yaml  output-values-updated-client-passwords-from-command-line.yaml  output-values-updated-client-passwords.yaml  output-values-updated-hostname.yaml  output-values.yaml  test-cert  test-cli-config  test-cli-config-client-secrets  test-cli-config-microservices  test-cli-config-multi  test-cli-config-multi-no-default  test-cli-config-nohostset  test-key  test-values-shared-keycloak.yaml  test-values.yaml
tests/files/helm/: README.md  insights-1.5.0.tgz  kxi-operator-1.2.3.tgz
tests/integration/: test_integration_assembly.py  test_user.py
