[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=6.2",
]


[project]
name = "kxicli"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "click>=7.0",
    "click_aliases>=1.0.0",
    "requests>=2.26.0",
    "tabulate>=0.8.9",
    "kubernetes>=18.20.0",
    "pyyaml>=6.0",
    "cryptography>=2.8",
    "pakxcli~=1.6.0rc5",
    "packaging>=21.3",
    "python-keycloak>=2.3.0",
    "azure-identity>=1.12.0",
    "msgraph-core>=0.2.2,<1.0.0",
    "dataclasses_json>=0.5.7",
    "semver>=2.13.0",
    "urllib3<2.0.0"
    ]


[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-cov",
    "pytest-mock>=3.6.1",
    "responses>=0.15.0",
    "requests-mock>=1.9.3",
    "twill"
]
doc = [
    "mkdocs>1.2.4",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "pymdown-extensions",
    "mkdocs-click"
]
pykx = ["pykx~=1.3.0"]


[project.scripts]
kxi = "kxicli.main:cli"

[tool.setuptools]
packages = [
    "kxicli"
]

[tool.setuptools_scm]
write_to = "kxicli/__version__.py"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that need a live environment to run against (deselect with '-m \"not integration\"')",
]
